declarative_imperatives/create_an_ingress_for_the_thing_that_we_already_did_the_http_route_stuff_for.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-web-ingress
  namespace: app-space
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-web
            port:
              number: 80
